[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/PaperMask02.gd" type="Script" id=1]
[ext_resource path="res://media/Enemy/bambooojin idle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 96 )

[node name="PaperMask02" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.258824, 0.6, 1, 1 )
texture = ExtResource( 2 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -16, 16 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Recover01" type="Timer" parent="."]
wait_time = 0.6

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -16, 16 )
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Recover01" to="." method="_on_Recover01_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
